// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/nvm/extract extractPackageFile() returns a result 1`] = `
Array [
  Object {
    "currentValue": "8.4.0",
    "datasource": "github",
    "depName": "node",
    "lookupName": "nodejs/node",
  },
]
`;

exports[`lib/manager/nvm/extract extractPackageFile() skips non ranges 1`] = `
Array [
  Object {
    "currentValue": "latestn",
    "datasource": "github",
    "depName": "node",
    "lookupName": "nodejs/node",
    "skipReason": "unsupported-version",
  },
]
`;

exports[`lib/manager/nvm/extract extractPackageFile() supports ranges 1`] = `
Array [
  Object {
    "currentValue": "8.4",
    "datasource": "github",
    "depName": "node",
    "lookupName": "nodejs/node",
  },
]
`;
